TEST_PROGRAMS/INVALID/prabhjot_sandhu/init_with_decl.min
var x: int = 10;
var y: float = 1.0;

while x do
   y = y * 2.0;
   x = x - 1;
done

print y;

